err2.txt
    Checking auth-framework v0.5.0-rc18 (C:\Users\cires\OneDrive\Documents\projects\AuthFramework)
error[E0425]: cannot find value `storage` in this scope
  --> src\analytics\compliance.rs:68:33
   |
62 |     storage: Arc<dyn AuthStorage>,
   |     ------- a field by that name exists in `Self`
...
68 |         Self { _config: config, storage }
   |                                 ^^^^^^^

error[E0425]: cannot find value `storage` in this scope
  --> src\analytics\reports.rs:55:33
   |
49 |     storage: Arc<dyn AuthStorage>,
   |     ------- a field by that name exists in `Self`
...
55 |         Self { _config: config, storage }
   |                                 ^^^^^^^

warning: unused import: `crate::storage::AuthStorage`
  --> src\analytics\dashboard.rs:10:5
   |
10 | use crate::storage::AuthStorage;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::sync::Arc`
  --> src\analytics\dashboard.rs:11:5
   |
11 | use std::sync::Arc;
   |     ^^^^^^^^^^^^^^

